# fe_gpu

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md  commands.txt  fe_gpu_design.md  project_brief.md
Examples/: 01TESTS_fe_gpu_small.sh  01TESTS_fe_gpu_small_output.txt  01TESTS_stata_dataset_small.do  02TESTS_miguel_data.sh  02TESTS_miguel_data_output.txt  02TESTS_miguel_datasets.do  03TESTS_massive_data.sh  03TESTS_massive_data_output.txt  03TESTS_stata.do  04TESTS_save_fe.sh  04TESTS_save_fe_output.txt  Test_reghdfe.do  Testing_Miguel_datasets.do  config_miguel.cfg  config_stata.cfg  export_fe.do  test_julia.jl  test_julia1.jl
configs/: config1.cfg  example_synthetic.txt  nlsw_factor.cfg  nlsw_factor_demo.cfg  nlsw_interaction.cfg  nlsw_three_fe.cfg  nlsw_two_fe.cfg  sample_model.cfg  synth_subset.cfg  synth_three_fe.cfg  synth_two_fe.cfg  synth_with_year.cfg
src/: CMakeLists.txt  src_main.f90
src/cli/: fe_cli.f90
src/core/: cluster_id_builder.c  cluster_id_builder.cpp  fe_cluster_utils.f90  fe_config.f90  fe_grouping.f90  fe_logging.f90  fe_pipeline.f90  fe_solver.f90  fe_types.f90
src/gpu/: fe_gpu_data.f90  fe_gpu_demean.f90  fe_gpu_linalg.cu  fe_gpu_linalg.f90  fe_gpu_runtime.cu  fe_gpu_runtime.f90  fe_gpu_runtime.h  fe_gpu_runtime_stub.c
src/io/: fe_data_io.f90
tests/: CMakeLists.txt  test_data_loader.f90  test_gpu_demean.f90  test_gpu_regression.f90  test_gpu_runtime.f90
tests_stata/: 01TESTS_stata_dataset_small.do  01_bin_for_fortran.sh  02TESTS_fe_gpu_small.sh  02_bin_miguel.sh  02_fortran_regression.sh  03_julia_regression.sh  REGS_01_stata.txt  Test_JREGHDFE.do  Test_ivreghdfe.do  Test_reghdfe.do  Test_reghdfe_id.do  Test_reghdfe_id_occ.do  Test_reghdfe_matrix.do  Test_reghdfe_matrix2.do  Test_reghdfe_occ.do  Test_reghdfe_subsets.do  Test_reghdfe_year.do  Testing_Miguel_datasets.do  cluster_counts.txt  config_miguel.cfg  config_simple.cfg  config_stata.cfg  config_stata2.cfg  count_clusters.do  nlsw_test.dta  test_julia.jl  tmp_compare.do  ~Test_JREGHDFE.do.stswp
tools/: dataframe_to_fe_binary.py  generate_synthetic_data.py  run_fixedeffects_gpu.jl
